--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -125,6 +125,11 @@ nav:
   - Reference:
     - reference/config.md
     - reference/api.md
+  - Project:
+    - CHANGELOG: CHANGELOG.md
+    - Playbook • ChatGPT: PLAYBOOK_ChatGPT.md
+    - Playbook • Cursor: PLAYBOOK_Cursor.md
+    - 404 page: 404.md
   - Contributing: contributing.md
 
 extra_css:
