--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -75,7 +75,9 @@ jobs:
       - name: Link check
         uses: lycheeverse/lychee-action@v2
         with:
-          args: --no-progress --accept 200,206,429 "docs/**/*.md"
+          args: >
+            --config lychee.toml
+            docs/**/*.md
 
       - name: Build site
         run: |
