ci(docs): fix lychee.toml verbose log level  [spi-011j]

--- a/lychee.toml
+++ b/lychee.toml
@@ -1,6 +1,6 @@
 # lychee configuration for SpinePrep docs
 # See: https://github.com/lycheeverse/lychee#configuration
-verbose = "false"
+verbose = "error"
 no_progress = true
 max_retries = 2
 retry_wait = 2
