ci(docs): switch deploy to cross-repo org root via gh-pages  [spi-011j]

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -100,16 +100,25 @@ jobs:
           path: docs/_assets/screenshots/*.png
 
   deploy:
-    name: Deploy to GitHub Pages
+    name: Deploy to spineprep.github.io
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: docs
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: github-pages
+          path: site
+      - name: Deploy to spineprep.github.io
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.PAGES_DEPLOY_TOKEN }}
+          external_repository: spineprep/spineprep.github.io
+          publish_branch: main
+          publish_dir: ./site
+          user_name: github-actions[bot]
+          user_email: 41898282+github-actions[bot]@users.noreply.github.com
+          commit_message: "Deploy site from SpinePrep@${{ github.sha }}"
       - name: Announce live URL
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
