--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,8 @@ name: Documentation CI
 on:
   push:
     branches: [ main ]
+    tags:
+      - 'v*.*.*'
   workflow_dispatch:
 
 permissions:
@@ -126,3 +128,41 @@ jobs:
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: |
           echo "Live site: https://spineprep.github.io" >> $GITHUB_STEP_SUMMARY
+
+  release:
+    name: Publish versioned docs (mike)
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+      - name: Install mike
+        run: |
+          python -m pip install --upgrade pip
+          pip install mike "mkdocs>=1.5,<2.0" "mkdocs-material>=9.5,<10.0"
+      - name: Configure git identity
+        run: |
+          git config user.email "${{ secrets.GIT_USER_EMAIL || '41898282+github-actions[bot]@users.noreply.github.com' }}"
+          git config user.name  "${{ secrets.GIT_USER_NAME  || 'github-actions[bot]' }}"
+      - name: Set VERSION env
+        run: echo "VERSION=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+      - name: Add Pages repo remote
+        env:
+          GH_PAT: ${{ secrets.PAGES_DEPLOY_TOKEN }}
+        run: |
+          git remote add pages https://x-access-token:${GH_PAT}@github.com/spineprep/spineprep.github.io.git
+          git fetch pages
+          git branch -r
+      - name: Release with mike
+        env:
+          VERSION: ${{ env.VERSION }}
+        run: |
+          bash scripts/docs_release.sh
+      - name: Announce versioned URLs
+        run: |
+          echo "Latest: https://spineprep.github.io/" >> $GITHUB_STEP_SUMMARY
+          echo "Stable: https://spineprep.github.io/stable/" >> $GITHUB_STEP_SUMMARY
