--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -63,6 +63,13 @@ jobs:
         run: |
           codespell docs/ mkdocs.yml
 
+      - name: Guard: forbid public PLAYBOOK pages
+        run: |
+          if git ls-files --error-unmatch "docs/PLAYBOOK_*.md" >/dev/null 2>&1; then
+            echo "ERROR: docs/PLAYBOOK_*.md must not be committed."
+            exit 1
+          fi
+
       - name: Generate references --check
         run: |
           python scripts/gen_docs_config_ref.py --check
